--- a/temp.html
+++ b/temp.html
@@ -10,19 +10,15 @@
       href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap"
       rel="stylesheet"
     />
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
   </head>
   <body>
     <h1>Cubit Cards</h1>
     <div class="container">
       <div class="content">
-        <script>object.addEventListener("load", tcgSDK.js);</script>
+        <img src="cubit.png" alt="Cubit Cards" class="fox-image" />
+        <h2>
+          Whoops, we still seem to be under development!<br />Check back soon!
+        </h2>
         <p>
           In the meantime, you can contact us at
           <a href="mailto:info@cubitcards.com">info@cubitcards.com</a>
