--- a/index.html
+++ b/index.html
@@ -22,12 +22,23 @@
     <h1>Cubit Cards</h1>
     <div class="container">
       <div class="content">
-        <script src="tcgSDK.js"></script>
         <script>
-          window.addEventListener('load', function() {
-            // Code to run when the page has finished loading
-            // Call any functions or perform any actions related to tcgSDK.js here
-          });
+          import pokemon from "pokemontcgsdk";
+
+          pokemon.configure({ apiKey: "c45c3585-37a9-4376-9dde-3b7bb16284c7" });
+
+          pokemon.card
+            .where({ name: "growlithe" })
+            .then((cards) => {
+              cards.forEach((card) => {
+                const img = document.createElement("img");
+                img.src = card.imageUrl;
+                document.body.appendChild(img);
+              });
+            })
+            .catch((error) => {
+              console.log("Error:", error.message);
+            });
         </script>
         <p>
           In the meantime, you can contact us at
